Hash function written, cleaned up build, fixed makefiles

--- a/SysProgTemplate_SS_15/Symboltable/makefile
+++ b/SysProgTemplate_SS_15/Symboltable/makefile
@@ -17,6 +17,8 @@ BINDIRTEST = debug
 ## darauf achten, dass letzte Zeile ohne "\" eingetragen wird
 
 OBJS = $(OBJDIR)/Symboltable.o \
+	   $(OBJDIR)/Key.o \
+	   $(OBJDIR)/StringTab.o
 	#$(OBJDIR)/xx1.o \
 	#$(OBJDIR)/xxn.o
 
@@ -53,6 +55,16 @@ makeTestSymboltable: SymboltableTarget TestSymboltableTarget
 
 SymboltableTarget: $(OBJS)
 
+makeTestKey: KeyTarget TestKeyTarget
+	g++ -g $(OBJDIR)/*.o $(BINDIRTEST)/TestKey.o  -o $(BINDIRTEST)/KeyTest
+
+KeyTarget: $(OBJS)
+
+makeTestStringTab: StringTabTarget TestStringTabTarget
+	g++ -g $(OBJDIR)/*.o $(BINDIRTEST)/TestStringTab.o  -o $(BINDIRTEST)/StringTabTest
+
+StringTabTarget: $(OBJS)
+
 # $@ name des object files = name auf der linken Seite vom Doppelpunkt des Targets
 # $< erste abhaengigkeit, $< das erste Element in der Liste der Abhaengigkeiten
 # $@ --> linke Seite vom Doppelpunkt
@@ -62,10 +74,15 @@ $(OBJDIR)/%.o :  $(SRCDIR)/%.cpp $(HEADERDIR)/%.h
 	g++ -g  -c -Wall  $<  -o $@
 
 
-
 TestSymboltableTarget: $(SRCDIR)/TestSymboltable.cpp $(HEADERDIR)/Symboltable.h
 	g++ -g  -c -Wall $(SRCDIR)/TestSymboltable.cpp -o $(BINDIRTEST)/TestSymboltable.o  
 	
+TestKeyTarget: $(SRCDIR)/TestKey.cpp $(HEADERDIR)/Key.h
+	g++ -g  -c -Wall $(SRCDIR)/TestKey.cpp -o $(BINDIRTEST)/TestKey.o
+	
+TestStringTabTarget: $(SRCDIR)/TestStringTab.cpp $(HEADERDIR)/StringTab.h
+	g++ -g  -c -Wall $(SRCDIR)/TestStringTab.cpp -o $(BINDIRTEST)/TestStringTab.o  
+  
 
 
 # loeschen aller files im verzeichnis $(OBJDIR) und $(BINDIRTEST) und neu compilieren
@@ -74,11 +91,18 @@ cleanSymboltable:
 	rm -rf $(OBJDIR)/*.o
 	rm -rf $(BINDIRTEST)/*
 	$(MAKE) makeTestSymboltable
+	$(MAKE) makeTestKey
+	$(MAKE) makeTestStringTab
+	
 	
 	
 	
 ## objs fuer GesamtProjekt neu erzeugen
 SymboltableOBJTarget:
 	$(MAKE) SymboltableTarget
+	$(MAKE) KeyTarget
+	$(MAKE) StringTabTarget
+	
+	
 
 	
